MCR-2110 Cleanup code
run IntelliJ "Silent Code Cleanup"