@@ -25,6 +25,7 @@ import java.io.UnsupportedEncodingException;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.FileSystem;
 import java.nio.file.FileSystemNotFoundException;
 import java.nio.file.Path;
@@ -106,12 +107,8 @@ public class MCRIVIEWIIIFImageImpl extends MCRIIIFImageImpl {
     }
 
     private String buildURL(String identifier) {
-        try {
-            return MCRFrontendUtil.getBaseURL() + "rsc/iiif/image/" + getImplName() + "/"
-                + URLEncoder.encode(identifier, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new MCRException("UTF-8 is not supported!", e);
-        }
+        return MCRFrontendUtil.getBaseURL() + "rsc/iiif/image/" + getImplName() + "/"
+            + URLEncoder.encode(identifier, StandardCharsets.UTF_8);
     }
 
     @Override
